Fix server list layout on mobile devices.

--- a/src/css/content.less
+++ b/src/css/content.less
@@ -519,7 +519,7 @@ section#document {
             td:nth-of-type(1):before { content: "name"; }
             td:nth-of-type(2):before { content: "databases"; }
             td:nth-of-type(3):before { content: "size"; }
-            td:nth-of-type(4) { display: none; }
+            td:nth-of-type(4), td.action-column { display: none; }
         }
     }
 
@@ -528,7 +528,7 @@ section#document {
             td:nth-of-type(1):before { content: "name"; }
             td:nth-of-type(2):before { content: "collections"; }
             td:nth-of-type(3):before { content: "size"; }
-            td:nth-of-type(4) { display: none; }
+            td:nth-of-type(4), td.action-column { display: none; }
         }
     }
 
@@ -537,7 +537,7 @@ section#document {
             td:nth-of-type(1):before { content: "name"; }
             td:nth-of-type(2):before { content: "documents"; }
             td:nth-of-type(3):before { content: "indexes"; }
-            td:nth-of-type(4) { display: none; }
+            td:nth-of-type(4), td.action-column { display: none; }
         }
     }
 }
